--- a/pages/notes/windows-is-not-my-pie/2023-08-10.index.en.mdx
+++ b/pages/notes/windows-is-not-my-pie/2023-08-10.index.en.mdx
@@ -122,7 +122,7 @@ I blended EV3 and Ben's configs with my own additions. The resulting
 configuration is little bit more complex, but it works on Ubuntu 22.04 LTS and
 on Windows 10 and Windows 11 with no additional configuration supporting both
 RNDIS and CDC-ECM. To spare myself (and possibly others) from replaying this
-configuration in the future manually, I wrote a few automations
+configuration in the future manually, I wrote a few automation
 [scripts](https://github.com/ramblehead/rpi4-ethernet-over-usb). With this
 scripts, to configure Raspberry Pi 4 to local Ethernet-over-USB gadget mode
 execute the following commands in Pi terminal:
