--- a/pages/blog/how-i-ended-up-here/2023-01-11.index.en.mdx
+++ b/pages/blog/how-i-ended-up-here/2023-01-11.index.en.mdx
@@ -603,7 +603,7 @@ or Tailwind CSS. The only sensible option was to use SCSS as the following:
 `hljs` is highlight.js class and `theme()` is Tailwind CSS
 [extension](https://tailwindcss.com/docs/functions-and-directives#theme).
 
-Unfortunately, this solution meas that additionally to plain CSS,
+Unfortunately, this solution means that additionally to plain CSS,
 <abbr title="Styled Components">SC</abbr> and Tailwind CSS, I would have to use
 SASS as well&nbsp;– just for the highlight.js switching support. Fortunately,
 Next.js supports SCSS out-of-the-box with no further configuration.
