--- a/pages/notes/windows-is-not-my-pie/2023-08-10.index.en.mdx
+++ b/pages/notes/windows-is-not-my-pie/2023-08-10.index.en.mdx
@@ -6,9 +6,9 @@ description:
   (RNDIS) and other major operating systems (CDC-ECM).
 ---
 
-When using Raspberry Pi 4 as an embedded system at some device, it is convenient
-to use a web server as the device user interface. Modern browsers expose
-sufficient functionality for web apps to perform on par with desktop and mobile
+When using Raspberry Pi 4 as an embedded system on a device, it is convenient to
+use a web server as the device user interface. Modern browsers expose sufficient
+functionality for web apps to perform on par with desktop and mobile
 applications. This type of Web User Interface (WUI) deployment is particularly
 attractive due to its unchallenged cross-platform compatibly, zero installation
 and, potentially, zero configuration.
