--- a/pages/notes/windows-is-not-my-pie/2023-08-10.index.en.mdx
+++ b/pages/notes/windows-is-not-my-pie/2023-08-10.index.en.mdx
@@ -10,8 +10,8 @@ When using Raspberry Pi 4 as an embedded system on a device, it is convenient to
 use a web server as the device user interface. Modern browsers expose sufficient
 functionality for web apps to perform on par with desktop and mobile
 applications. This type of Web User Interface (WUI) deployment is particularly
-attractive due to its unchallenged cross-platform compatibly, zero installation
-and, potentially, zero configuration.
+attractive due to its unchallenged cross-platform compatibly, no installation
+requirements and, potentially, zero configuration.
 
 While Raspberry Pi 4 has Ethernet interface and it is fairly easy to configure
 on TCP/IP networks, it might still be challenging for an end user to connect it
