--- a/pages/blog/windows-is-not-my-pie/2023-08-10.index.en.mdx
+++ b/pages/blog/windows-is-not-my-pie/2023-08-10.index.en.mdx
@@ -2,12 +2,14 @@
 title: Windows is not my Pi
 authors:
   - Victor Rybynok
-datePublished: '2023-08-13'
 draft: true
+datePublished: '2023-08-13'
+# dateUpdated: '2023-08-13'
 description:
   Local Ethernet-over-USB Raspberry Pi 4 configuration, usable for device web
   user interfaces, and compatible with Windows (RNDIS) and other major host
   operating systems (CDC-ECM).
+# ogImage: /static/blog/how-i-ended-up-here/front-end-doom.jpg
 categories: [raspberry-pi, usb, dhcp, ethernet, mdns, rndis, cdc-ecm]
 ---
 
