--- a/pages/blog/windows-is-not-my-pi/2023-08-10.index.en.mdx
+++ b/pages/blog/windows-is-not-my-pi/2023-08-10.index.en.mdx
@@ -107,6 +107,7 @@ Only" enabled:
   <Image
     src="/static/blog/windows-is-not-my-pi/link-local-only.png"
     alt=""
+    priority
   />
   <figcaption>
     <>Ethernet-over-USB Link-Local Only on Ubuntu 22.04 LTS</>
@@ -120,6 +121,7 @@ Windows 10 and Windows 11 recognise such USB configuration as COM port:
     src="/static/blog/windows-is-not-my-pi/windows-device-manager-com.png"
     alt=""
     className="!rounded-none"
+    priority
   />
   <figcaption>
     <>Ethernet-over-USB recognised as COM port in Windows 10</>
@@ -182,6 +184,7 @@ should look like on Ubuntu:
   <Image
     src="/static/blog/windows-is-not-my-pi/ubuntu-correct-config.png"
     alt=""
+    priority
   />
   <figcaption>
     <>Ethernet-over-USB correct configuration on Ubuntu 22.04 LTS</>
@@ -195,6 +198,7 @@ and on Windows:
     src="/static/blog/windows-is-not-my-pi/windows-correct-config.png"
     alt=""
     className="!rounded-none"
+    priority
   />
   <figcaption>
     <>Ethernet-over-USB correct configuration on Windows 10</>
